Add javascript for accordion dropdown

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -449,9 +449,9 @@ footer {
     background-color: #ccc;
   }
   main .info .mobile.accordion-menu .panel {
-    padding: 0 18px;
+    padding: 10px 18px;
     display: none;
-    background-color: white;
+    background-color: #0c1525;
     overflow: hidden;
   }
   footer {
