--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -266,9 +266,9 @@ footer {
                     background-color: #ccc; 
                 }
                 .panel {
-                    padding: 0 18px;
+                    padding: 10px 18px;
                     display: none;
-                    background-color: white;
+                    background-color: $background-secondary;
                     overflow: hidden;
                 }
             }
