--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -395,6 +395,8 @@ footer {
     flex-direction: row;
     justify-content: space-around;
     flex-wrap: nowrap;
+    margin-top: 10px;
+    margin-bottom: 20px;
   }
   main .hero h1 {
     display: flex;
@@ -449,10 +451,19 @@ footer {
     background-color: #ccc;
   }
   main .info .mobile.accordion-menu .panel {
-    padding: 10px 18px;
-    display: none;
+    padding: 0 18px;
     background-color: #0c1525;
     overflow: hidden;
+    max-height: 0;
+    transition: max-height 0.5s ease;
+  }
+  main .info .mobile.accordion-menu .panel p {
+    padding: 10px 0;
+  }
+  main .info .mobile.accordion-menu .panel.show-content {
+    padding: 0 18px;
+    display: block;
+    max-height: 500px;
   }
   footer {
     border-radius: 0 0 5px 5px;
