--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -201,6 +201,9 @@ footer {
             justify-content: space-around;
             flex-wrap: nowrap;
 
+            margin-top: 10px;
+            margin-bottom: 20px;
+
             h1 {
                 display: flex;
                 flex-wrap: wrap;
@@ -266,10 +269,21 @@ footer {
                     background-color: #ccc; 
                 }
                 .panel {
-                    padding: 10px 18px;
-                    display: none;
+                    padding: 0 18px;
+
                     background-color: $background-secondary;
                     overflow: hidden;
+                    max-height: 0;
+                    transition: max-height 0.5s ease;
+                    p {
+                        padding: 10px 0;
+                    }
+                }
+
+                .panel.show-content {
+                    padding: 0 18px;
+                    display: block;
+                    max-height: 500px;
                 }
             }
         }
