--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -499,6 +499,7 @@ footer {
                         width: 100%;
                         margin-top: 0.5rem;
                         margin-bottom: 0.5rem;
+                        cursor: pointer;
 
                         &.active {
                             color: $secondary;
