--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -641,7 +641,10 @@ footer {
     width: 100%;
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
+    background-color: transparent;
+    padding: 0;
     cursor: pointer;
+    transition: padding 0.5s ease, background-color 0.5s ease;
   }
   main .info .desktop.slider .slider-menu li.active {
     color: #1D71B8;
