Add background image

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -374,6 +374,10 @@ footer {
     display: none;
   }
   main {
+    background-image: url("/public/storage/background-waves.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-x: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -565,6 +569,10 @@ footer {
     display: none;
   }
   main {
+    background-image: url("/public/storage/background-waves.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-x: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -647,7 +655,7 @@ footer {
     transition: padding 0.5s ease, background-color 0.5s ease;
   }
   main .info .desktop.slider .slider-menu li.active {
-    color: #1D71B8;
+    color: #15537C;
     background-color: rgb(218, 218, 218);
     padding: 10px 20px;
   }
@@ -676,5 +684,14 @@ footer {
   main .tech fieldset legend h2 {
     padding-left: 5px;
     padding-right: 5px;
+  }
+  footer {
+    display: flex;
+    flex-direction: column;
+  }
+  footer .terms {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }/*# sourceMappingURL=app.css.map */
