--- a/resources/css/__text.scss
+++ b/resources/css/__text.scss
@@ -19,6 +19,7 @@ $secondary : #1D71B8;
 
 $text-default-color : rgb(218, 218, 218);
 $text-primary-color : #2899E5;
+$text-secondary-color : #15537C;
 
 $paragraph-mobile-size : 18px;
 $paragraph-desktop-size : 22px;
