--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -654,10 +654,17 @@ footer {
     cursor: pointer;
     transition: padding 0.5s ease, background-color 0.5s ease;
   }
+  main .info .desktop.slider .slider-menu li:hover {
+    background-color: transparent;
+    padding: 0 20px;
+  }
   main .info .desktop.slider .slider-menu li.active {
     color: #15537C;
     background-color: rgb(218, 218, 218);
     padding: 10px 20px;
+  }
+  main .info .desktop.slider .slider-menu li.active:hover {
+    background-color: transparent;
   }
   main .info .desktop.slider .slider-content {
     width: 55%;
