--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -688,16 +688,19 @@ footer {
     border: 2px solid #2899E5;
     border-radius: 5px;
     padding: 10px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 15px;
   }
   main .skills fieldset legend h2 {
     padding-left: 5px;
     padding-right: 5px;
   }
   main .skills fieldset .change-view {
-    width: inherit;
+    width: 100%;
     display: flex;
     justify-content: end;
-    align-items: end;
   }
   main .skills fieldset .change-view label {
     position: relative;
@@ -735,6 +738,29 @@ footer {
   }
   main .skills fieldset .change-view input[type=checkbox]:checked + label img:last-of-type {
     opacity: 1;
+  }
+  main .skills fieldset .skill-card {
+    border: 4px solid;
+    border-radius: 7px;
+    padding: 10px 15px;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+  main .skills fieldset .skill-card p {
+    padding: 0;
+    margin: 0;
+  }
+  main .skills fieldset .skill-card.character {
+    border-color: #2899E5;
+    background-color: #15537C;
+  }
+  main .skills fieldset .skill-card.educational {
+    border-color: orange;
+    background-color: orangered;
+  }
+  main .skills fieldset .skill-card.team {
+    border-color: greenyellow;
+    background-color: green;
   }
   footer {
     display: flex;
