--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -559,16 +559,21 @@ footer {
                 border-radius: 5px;
                 padding: 10px;
 
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                gap: 15px;
+
                 legend h2 {
                     padding-left: 5px;
                     padding-right: 5px;
                 }
 
                 .change-view{
-                    width: inherit;
+                    width: 100%;
                     display: flex;
                     justify-content: end;
-                    align-items: end;
+                    
 
                     label {
                         position: relative;
@@ -616,6 +621,32 @@ footer {
                         img:last-of-type {
                             opacity: 1;
                         }
+                    }
+                }
+
+                .skill-card {
+                    border: 4px solid;
+                    border-radius: 7px;
+                    padding: 10px 15px;
+                    width: fit-content;
+
+
+                    p {
+                        padding: 0;
+                        margin: 0;
+                    }
+
+                    &.character {
+                        border-color: $primary;
+                        background-color: $background-blue-dark;
+                    }
+                    &.educational {
+                        border-color: orange;
+                        background-color: orangered;
+                    }
+                    &.team {
+                        border-color: greenyellow;
+                        background-color: green;
                     }
                 }
             }
