Create Review section of about me page

--- a/resources/css/__colors.scss
+++ b/resources/css/__colors.scss
@@ -7,3 +7,5 @@ $background-blue-light : #2899E5;
 $background-blue-neutral : #1D71B8;
 $background-blue-dark : #15537C;
 
+$card-background-gradient : linear-gradient(25deg, #5d5dd4b7, #8181b263)
+
