--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -683,7 +683,7 @@ footer {
     opacity: 1;
     visibility: visible;
   }
-  main .skills fieldset {
+  main .feedbacks fieldset {
     width: 100%;
     border: 2px solid #2899E5;
     border-radius: 5px;
@@ -692,17 +692,18 @@ footer {
     flex-direction: row;
     flex-wrap: wrap;
     gap: 15px;
+    transition: all 0.5s ease;
   }
-  main .skills fieldset legend h2 {
+  main .feedbacks fieldset legend h2 {
     padding-left: 5px;
     padding-right: 5px;
   }
-  main .skills fieldset .change-view {
+  main .feedbacks fieldset .change-view {
     width: 100%;
     display: flex;
     justify-content: end;
   }
-  main .skills fieldset .change-view label {
+  main .feedbacks fieldset .change-view label {
     position: relative;
     width: 90px;
     height: 40px;
@@ -712,7 +713,7 @@ footer {
     border: 2px solid #1D71B8;
     border-radius: 20px;
   }
-  main .skills fieldset .change-view label .toggle_circle {
+  main .feedbacks fieldset .change-view label .toggle_circle {
     position: absolute;
     left: 6px;
     border: 3px solid #2899E5;
@@ -721,46 +722,72 @@ footer {
     height: 30px;
     transition: left 0.3s ease;
   }
-  main .skills fieldset .change-view label img {
+  main .feedbacks fieldset .change-view label img {
     border-radius: 50%;
     width: 30px;
     height: 30px;
     transition: opacity 0.3s ease;
   }
-  main .skills fieldset .change-view label img:last-of-type {
+  main .feedbacks fieldset .change-view label img:last-of-type {
     opacity: 0.3;
   }
-  main .skills fieldset .change-view input[type=checkbox]:checked + label .toggle_circle {
+  main .feedbacks fieldset .change-view input[type=checkbox]:checked + label .toggle_circle {
     left: 50px;
   }
-  main .skills fieldset .change-view input[type=checkbox]:checked + label img:first-of-type {
+  main .feedbacks fieldset .change-view input[type=checkbox]:checked + label img:first-of-type {
     opacity: 0.3;
   }
-  main .skills fieldset .change-view input[type=checkbox]:checked + label img:last-of-type {
+  main .feedbacks fieldset .change-view input[type=checkbox]:checked + label img:last-of-type {
     opacity: 1;
   }
-  main .skills fieldset .skill-card {
-    border: 4px solid;
-    border-radius: 7px;
-    padding: 10px 15px;
-    width: -moz-fit-content;
-    width: fit-content;
+  main .feedbacks fieldset .review {
+    display: flex;
+    justify-content: start;
+    align-items: start;
+    gap: 20px;
+    border: 0.5px solid #2899E5;
+    border-radius: 5px;
+    background: linear-gradient(25deg, rgba(93, 93, 212, 0.7176470588), rgba(129, 129, 178, 0.3882352941));
+    box-shadow: #2899E5 1px 1px 5px;
+    padding: 5px 10px;
+    width: 100%;
+    transition: all 0.7s ease-in-out;
   }
-  main .skills fieldset .skill-card p {
-    padding: 0;
-    margin: 0;
+  main .feedbacks fieldset .review .top {
+    min-width: 30%;
   }
-  main .skills fieldset .skill-card.character {
-    border-color: #2899E5;
-    background-color: #15537C;
+  main .feedbacks fieldset .review .top .keyword {
+    font-weight: 700;
   }
-  main .skills fieldset .skill-card.educational {
-    border-color: orange;
-    background-color: orangered;
+  main .feedbacks fieldset .review .top .role {
+    font-size: medium;
   }
-  main .skills fieldset .skill-card.team {
-    border-color: greenyellow;
-    background-color: green;
+  main .feedbacks fieldset .review .top .fa.fa-star {
+    color: #0c1525;
+  }
+  main .feedbacks fieldset .review .top .fa.fa-star.checked {
+    color: #2899E5;
+  }
+  main .feedbacks fieldset .review .message {
+    width: 100%;
+  }
+  main .feedbacks fieldset .review .message p {
+    font-size: medium;
+  }
+  main .feedbacks fieldset.grid {
+    margin: auto;
+  }
+  main .feedbacks fieldset.grid .review {
+    width: 29%;
+  }
+  main .feedbacks fieldset.grid .review .top {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  main .feedbacks fieldset.grid .review .message {
+    display: none;
   }
   footer {
     display: flex;
