--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -552,7 +552,7 @@ footer {
                 }
             }
         }
-        .skills {
+        .feedbacks {
             fieldset {
                 width: 100%;
                 border: 2px solid $text-primary-color;
@@ -563,6 +563,8 @@ footer {
                 flex-direction: row;
                 flex-wrap: wrap;
                 gap: 15px;
+
+                transition: all .5s ease;
 
                 legend h2 {
                     padding-left: 5px;
@@ -624,29 +626,63 @@ footer {
                     }
                 }
 
-                .skill-card {
-                    border: 4px solid;
-                    border-radius: 7px;
-                    padding: 10px 15px;
-                    width: fit-content;
+                .review {
+                    display: flex;
+                    justify-content: start;
+                    align-items: start;
+                    gap: 20px;
+
+                    border: .5px solid $primary;
+                    border-radius: 5px;
+                    background: $card-background-gradient;
+                    box-shadow: $primary 1px 1px 5px;
+                    padding: 5px 10px;
+
+                    width: 100%;
+
+                    transition: all 0.7s ease-in-out;
 
 
-                    p {
-                        padding: 0;
-                        margin: 0;
-                    }
 
-                    &.character {
-                        border-color: $primary;
-                        background-color: $background-blue-dark;
+                    .top {
+                        min-width: 30%;
+                        .keyword {
+                            font-weight: 700;
+                        }
+                        .role {
+                            font-size: medium;
+                        }
+
+                        .fa.fa-star {
+                            color: $background-secondary;
+
+                            &.checked {
+                                color: $primary;
+                            }
+                        }
                     }
-                    &.educational {
-                        border-color: orange;
-                        background-color: orangered;
+                    .message {
+                        width: 100%;
+                        p {
+                            font-size: medium;
+                        }
                     }
-                    &.team {
-                        border-color: greenyellow;
-                        background-color: green;
+                }
+
+                &.grid {
+                    margin: auto;
+                    .review {
+                        width: 29%;
+                        
+                        .top {
+                            height: 100%;
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: space-between;
+                        }
+                        .message {
+                            display: none;
+                        }
                     }
                 }
             }
