--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -470,6 +470,51 @@ footer {
     display: block;
     max-height: 500px;
   }
+  main .feedbacks fieldset {
+    width: 100%;
+    border: 2px solid #2899E5;
+    box-sizing: border-box;
+    border-radius: 5px;
+    padding: 10px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 15px;
+  }
+  main .feedbacks fieldset legend h2 {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+  main .feedbacks fieldset .change-view {
+    display: none;
+  }
+  main .feedbacks fieldset .review {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    border: 0.5px solid #2899E5;
+    border-radius: 5px;
+    background: linear-gradient(25deg, rgba(93, 93, 212, 0.7176470588), rgba(129, 129, 178, 0.3882352941));
+    box-shadow: #2899E5 1px 1px 5px;
+    padding: 5px 10px;
+    width: 100%;
+  }
+  main .feedbacks fieldset .review .top, main .feedbacks fieldset .review .message {
+    margin-top: 10px;
+    width: 100%;
+  }
+  main .feedbacks fieldset .review .keyword {
+    font-weight: 700;
+  }
+  main .feedbacks fieldset .review .role {
+    font-size: medium;
+  }
+  main .feedbacks fieldset .review .fa.fa-star {
+    color: #0c1525;
+  }
+  main .feedbacks fieldset .review .fa.fa-star.checked {
+    color: #2899E5;
+  }
   footer {
     border-radius: 0 0 5px 5px;
   }
