--- a/resources/css/__colors.scss
+++ b/resources/css/__colors.scss
@@ -1,5 +1,7 @@
 $background-test: red;
 
+$default-white: rgb(218, 218, 218);
+
 $background-primary: #080e18;
 $background-secondary: #0c1525;
 
@@ -7,5 +9,6 @@ $background-blue-light : #2899E5;
 $background-blue-neutral : #1D71B8;
 $background-blue-dark : #15537C;
 
-$card-background-gradient : linear-gradient(25deg, #5d5dd4b7, #8181b263)
+$dark-background-gradient : linear-gradient(25deg, #5d5dd4b7, #8181b263);
+$light-background-gradient : linear-gradient(25deg, $default-white, #9bc9e9);
 
