--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -547,6 +547,7 @@ footer {
         .info {
             display: flex;
             flex-direction: column;
+            margin-bottom: 200px;
 
             .mobile.accordion-menu {
                 display: none;
