--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -567,6 +567,7 @@ a:hover {
   footer .footer-navigation a {
     position: relative;
     text-decoration: none;
+    color: rgb(218, 218, 218);
   }
   footer .footer-navigation a:hover {
     color: #1D71B8;
@@ -928,6 +929,7 @@ a:hover {
   footer .footer-navigation a {
     position: relative;
     text-decoration: none;
+    color: rgb(218, 218, 218);
   }
   footer .footer-navigation a:hover {
     color: #1D71B8;
