--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -355,6 +355,31 @@ a {
                 }
             }
         }
+
+        .terms {
+            margin-bottom: 0;
+            article {
+                margin: 75px 0 50px 0;
+
+                h3 {
+                    margin: 50px 0 10px 0;
+                    font-weight: 700;
+                    &::before {
+                        content: "⦿ "
+                    }
+                }
+
+                ul {
+                    padding-left: 1rem;
+                    margin: 20px 0;
+                    li {
+                        margin: 5px 0;
+                        list-style-type:disc;
+                        font-weight:normal;
+                    }
+                }
+            }
+        }
     }
 
     footer {
@@ -795,6 +820,30 @@ a {
                         .message {
                             display: none;
                         }
+                    }
+                }
+            }
+        }
+
+        .terms {
+            article {
+                margin: 75px 0 50px 0;
+
+                h3 {
+                    margin: 50px 0 10px 0;
+                    font-weight: 700;
+                    &::before {
+                        content: "⦿ "
+                    }
+                }
+
+                ul {
+                    padding-left: 1rem;
+                    margin: 20px 0;
+                    li {
+                        margin: 5px 0;
+                        list-style-type:disc;
+                        font-weight:normal;
                     }
                 }
             }
