--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -547,6 +547,61 @@ a:hover {
     list-style-type: disc;
     font-weight: normal;
   }
+  main .contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  main .contact form {
+    box-sizing: border-box;
+    max-width: 700px;
+    width: 100%;
+    background: linear-gradient(25deg, rgba(93, 93, 212, 0.7176470588), rgba(129, 129, 178, 0.3882352941));
+    box-shadow: #2899E5 1px 2px 5px;
+    border: 2px solid #2899E5;
+    border-radius: 10px;
+    padding: 15px 20px;
+  }
+  main .contact form h1 {
+    justify-self: center;
+    margin: 10px 0;
+  }
+  main .contact form label {
+    display: flex;
+    flex-direction: column;
+  }
+  main .contact form label input, main .contact form label textarea {
+    box-sizing: border-box;
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 25px;
+    padding: 10px 15px;
+    border-radius: 5px;
+    background: rgba(12, 21, 37, 0.75);
+    color: rgb(218, 218, 218);
+  }
+  main .contact form label input:focus, main .contact form label textarea:focus {
+    outline: none;
+    border: 3px solid #2899E5;
+  }
+  main .contact form button {
+    width: 100%;
+    padding: 10px 0;
+    border-radius: 5px;
+    background: linear-gradient(25deg, rgb(218, 218, 218), #9bc9e9);
+    color: #1D71B8;
+    border: 3px solid transparent;
+  }
+  main .contact form button:hover {
+    background: linear-gradient(25deg, rgba(93, 93, 212, 0.7176470588), rgba(129, 129, 178, 0.3882352941));
+    color: #2899E5;
+    border-color: #2899E5;
+  }
+  main .contact form button:focus {
+    border-color: #2899E5;
+    box-shadow: #1D71B8 1px 2px 5px;
+  }
   footer {
     display: flex;
     width: 100%;
@@ -933,6 +988,61 @@ a:hover {
     margin: 5px 0;
     list-style-type: disc;
     font-weight: normal;
+  }
+  main .contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  main .contact form {
+    box-sizing: border-box;
+    max-width: 700px;
+    width: 100%;
+    background: linear-gradient(25deg, rgba(93, 93, 212, 0.7176470588), rgba(129, 129, 178, 0.3882352941));
+    box-shadow: #2899E5 1px 2px 5px;
+    border: 2px solid #2899E5;
+    border-radius: 10px;
+    padding: 15px 20px;
+  }
+  main .contact form h1 {
+    justify-self: center;
+    margin: 10px 0;
+  }
+  main .contact form label {
+    display: flex;
+    flex-direction: column;
+  }
+  main .contact form label input, main .contact form label textarea {
+    box-sizing: border-box;
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 25px;
+    padding: 10px 15px;
+    border-radius: 5px;
+    background: rgba(12, 21, 37, 0.75);
+    color: rgb(218, 218, 218);
+  }
+  main .contact form label input:focus, main .contact form label textarea:focus {
+    outline: none;
+    border: 3px solid #2899E5;
+  }
+  main .contact form button {
+    width: 100%;
+    padding: 10px 0;
+    border-radius: 5px;
+    background: linear-gradient(25deg, rgb(218, 218, 218), #9bc9e9);
+    color: #1D71B8;
+    border: 3px solid transparent;
+  }
+  main .contact form button:hover {
+    background: linear-gradient(25deg, rgba(93, 93, 212, 0.7176470588), rgba(129, 129, 178, 0.3882352941));
+    color: #2899E5;
+    border-color: #2899E5;
+  }
+  main .contact form button:focus {
+    border-color: #2899E5;
+    box-shadow: #1D71B8 1px 2px 5px;
   }
   footer {
     display: flex;
