--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -380,6 +380,67 @@ a {
                 }
             }
         }
+
+        .contact {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+            form {
+                box-sizing: border-box;
+                max-width: 700px;
+                width: 100%;
+                background: $dark-background-gradient;
+                box-shadow: $primary 1px 2px 5px;
+                border: 2px solid $primary;
+                border-radius: 10px;
+                padding: 15px 20px;
+
+                h1 {
+                    justify-self: center;
+                    margin: 10px 0;
+                }
+
+                label {
+                    display: flex;
+                    flex-direction: column;
+                    input, textarea {
+                        box-sizing: border-box;
+                        width: 100%;
+                        margin-top: 10px;
+                        margin-bottom: 25px;
+                        padding: 10px 15px;
+                        border-radius: 5px;
+                        background: rgba(12, 21, 37, 0.75);
+                        color: $text-default-color;
+                    }
+                    input:focus, textarea:focus {
+                        outline: none;
+                        border: 3px solid $primary;
+                    }
+                }
+
+                button {
+                    width: 100%;
+                    padding: 10px 0;
+                    border-radius: 5px;
+                    background: $light-background-gradient;
+                    color: $secondary;
+                    border: 3px solid transparent;
+
+                    &:hover {
+                        background: $dark-background-gradient;
+                        color: $primary;
+                        border-color: $primary;
+                    }
+                    &:focus {
+                        border-color: $primary;
+                        box-shadow: $secondary 1px 2px 5px;
+                    }
+                }
+            }
+        }
     }
 
     footer {
@@ -844,6 +905,68 @@ a {
                         margin: 5px 0;
                         list-style-type:disc;
                         font-weight:normal;
+                    }
+                }
+            }
+        }
+
+        .contact {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+            form {
+                box-sizing: border-box;
+                max-width: 700px;
+                width: 100%;
+                background: $dark-background-gradient;
+                box-shadow: $primary 1px 2px 5px;
+                border: 2px solid $primary;
+                border-radius: 10px;
+                padding: 15px 20px;
+
+                h1 {
+                    justify-self: center;
+                    margin: 10px 0;
+                }
+
+                label {
+                    display: flex;
+                    flex-direction: column;
+                    input, textarea {
+                        box-sizing: border-box;
+                        width: 100%;
+                        margin-top: 10px;
+                        margin-bottom: 25px;
+                        padding: 10px 15px;
+                        border-radius: 5px;
+                        background: rgba(12, 21, 37, 0.75);
+                        color: $text-default-color;
+                    }
+                    input:focus, textarea:focus {
+                        outline: none;
+                        border: 3px solid $primary;
+                    }
+                }
+
+                button {
+                    width: 100%;
+                    padding: 10px 0;
+                    border-radius: 5px;
+                    background: $light-background-gradient;
+                    color: $secondary;
+                    border: 3px solid transparent;
+
+                    &:hover {
+                        background: $dark-background-gradient;
+                        color: $primary;
+                        border-color: $primary;
+
+                    }
+                    &:focus {
+                        border-color: $primary;
+                        box-shadow: $secondary 1px 2px 5px;
                     }
                 }
             }
