--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -982,6 +982,10 @@ a {
                 background-color: $primary;
                 margin: 20px auto;
             }
+
+            .project {
+                margin: 50px 0;
+            }
         }
     }
 
