--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1056,6 +1056,62 @@ a:hover {
   }
   main .projects .project {
     margin: 50px 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  main .projects .project p, main .projects .project ul {
+    font-size: medium;
+  }
+  main .projects .project h2 {
+    width: 100%;
+  }
+  main .projects .project h3 {
+    width: 100%;
+    margin: 15px 0 0 0;
+  }
+  main .projects .project .details, main .projects .project .visuals {
+    flex: 1;
+  }
+  main .projects .project .details {
+    box-sizing: border-box;
+  }
+  main .projects .project .details .features {
+    padding-left: 1rem;
+  }
+  main .projects .project .details .features li {
+    margin: 5px 0;
+    list-style-type: square;
+    font-weight: normal;
+  }
+  main .projects .project .details .tech {
+    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  main .projects .project .details .tech li {
+    border: 4px solid #1D71B8;
+    margin: 3px 5px;
+    padding: 2px 4px;
+    border-radius: 5px;
+  }
+  main .projects .project .visuals {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+  main .projects .project .visuals a {
+    width: 40%;
+  }
+  main .projects .project .visuals img {
+    width: 100%;
+    height: auto;
+  }
+  main .projects .project .visuals img:hover {
+    border: 3px solid #2899E5;
   }
   footer {
     display: flex;
