--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -985,6 +985,74 @@ a {
 
             .project {
                 margin: 50px 0;
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+
+                p, ul {
+                    font-size: medium;
+                }
+
+                h2 {
+                    width: 100%;
+                }
+
+                h3 {
+                    width: 100%;
+                    margin: 15px 0 0 0;
+                }
+
+                .details, .visuals {
+                    flex: 1;
+                }
+
+                .details{
+                    box-sizing: border-box;
+
+                    .features {
+                        padding-left: 1rem;
+                        // margin: 20px 0;
+                        li {
+                            margin: 5px 0;
+                            list-style-type:square;
+                            font-weight:normal;
+                        }
+                    }
+
+                    .tech {
+                        margin: 0;
+                        display: flex;
+                        flex-wrap: wrap;
+                        li {
+                            border: 4px solid $secondary;
+                            margin: 3px 5px;
+                            padding: 2px 4px;
+                            border-radius: 5px;
+                        }
+                    }
+                }
+
+                .visuals {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-items: center;
+                    flex-wrap: wrap;
+                    gap: 10px;
+
+                    a {
+                        width: 40%;
+                    }
+
+                    img {
+                        width: 100%;
+                        height: auto;
+
+                        &:hover {
+                            border: 3px solid $primary;
+                        }
+                    }
+                }
             }
         }
     }
