--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -874,6 +874,8 @@ a:hover {
     flex-wrap: wrap;
     gap: 15px;
     transition: all 0.5s ease;
+    max-height: 550px;
+    overflow-y: scroll;
   }
   main .feedbacks fieldset legend h2 {
     padding-left: 5px;
