--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -402,6 +402,10 @@ a {
                     margin: 10px 0;
                 }
 
+                #bottingtrap {
+                    display: none;
+                }
+
                 label {
                     display: flex;
                     flex-direction: column;
@@ -932,6 +936,10 @@ a {
                 h1 {
                     justify-self: center;
                     margin: 10px 0;
+                }
+
+                #bottingtrap {
+                    display: none;
                 }
 
                 label {
