--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -480,6 +480,49 @@ a:hover {
     display: block;
     max-height: 500px;
   }
+  main .reviews .reviews-wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    margin: 0 auto;
+  }
+  main .reviews .reviews-wrapper .review {
+    box-sizing: border-box;
+    align-self: flex-start;
+    border: 0.5px solid #2899E5;
+    border-radius: 5px;
+    background: linear-gradient(25deg, rgba(93, 93, 212, 0.7176470588), rgba(129, 129, 178, 0.3882352941));
+    box-shadow: #2899E5 1px 1px 5px;
+    padding: 5px 10px;
+    max-width: 90%;
+  }
+  main .reviews .reviews-wrapper .review:nth-child(even) {
+    background: linear-gradient(-25deg, rgba(93, 93, 212, 0.7176470588), rgba(129, 129, 178, 0.3882352941));
+    align-self: flex-end;
+  }
+  main .reviews .reviews-wrapper .review .top {
+    min-width: 30%;
+    margin-bottom: 10px;
+  }
+  main .reviews .reviews-wrapper .review .top .keyword {
+    font-weight: 700;
+  }
+  main .reviews .reviews-wrapper .review .top .role {
+    font-size: medium;
+  }
+  main .reviews .reviews-wrapper .review .top .fa.fa-star {
+    color: #0c1525;
+  }
+  main .reviews .reviews-wrapper .review .top .fa.fa-star.checked {
+    color: #2899E5;
+  }
+  main .reviews .reviews-wrapper .review .message {
+    width: 100%;
+  }
+  main .reviews .reviews-wrapper .review .message p {
+    font-size: medium;
+  }
   main .feedbacks fieldset {
     width: 100%;
     border: 2px solid #2899E5;
@@ -934,6 +977,48 @@ a:hover {
   main .info .desktop.slider .slider-content article.active {
     opacity: 1;
     visibility: visible;
+  }
+  main .reviews .reviews-wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    margin: 0 auto;
+  }
+  main .reviews .reviews-wrapper .review {
+    box-sizing: border-box;
+    align-self: flex-start;
+    border: 0.5px solid #2899E5;
+    border-radius: 5px;
+    background: linear-gradient(25deg, rgba(93, 93, 212, 0.7176470588), rgba(129, 129, 178, 0.3882352941));
+    box-shadow: #2899E5 1px 1px 5px;
+    padding: 5px 10px;
+    max-width: 75%;
+  }
+  main .reviews .reviews-wrapper .review:nth-child(even) {
+    background: linear-gradient(-25deg, rgba(93, 93, 212, 0.7176470588), rgba(129, 129, 178, 0.3882352941));
+    align-self: flex-end;
+  }
+  main .reviews .reviews-wrapper .review .top {
+    min-width: 30%;
+  }
+  main .reviews .reviews-wrapper .review .top .keyword {
+    font-weight: 700;
+  }
+  main .reviews .reviews-wrapper .review .top .role {
+    font-size: medium;
+  }
+  main .reviews .reviews-wrapper .review .top .fa.fa-star {
+    color: #0c1525;
+  }
+  main .reviews .reviews-wrapper .review .top .fa.fa-star.checked {
+    color: #2899E5;
+  }
+  main .reviews .reviews-wrapper .review .message {
+    width: 100%;
+  }
+  main .reviews .reviews-wrapper .review .message p {
+    font-size: medium;
   }
   main .feedbacks {
     margin-bottom: 0;
