--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -1230,24 +1230,27 @@ a {
                     }
                 }
 
-                .visuals {
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: center;
-                    align-items: center;
-                    flex-wrap: wrap;
-                    gap: 10px;
-
-                    a {
-                        width: 40%;
-                    }
-
-                    img {
-                        width: 100%;
-                        height: auto;
-
-                        &:hover {
-                            border: 3px solid $primary;
+                .gallery {
+                    width: 50%;
+                    .visuals {
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: center;
+                        align-items: center;
+                        flex-wrap: wrap;
+                        gap: 10px;
+    
+                        a {
+                            width: 40%;
+                        }
+    
+                        img {
+                            width: 100%;
+                            height: auto;
+    
+                            &:hover {
+                                border: 3px solid $primary;
+                            }
                         }
                     }
                 }
